@@ -3,8 +3,10 @@ duicontrolpanel (0.8.17~unreleased) unstable; urgency=low
   * Changes: help content can be specified for the icon of a plugin
     through .desktop file or DcpBrief
   * Adds credential for mce usage
+  * Fixes: applet does not get the new toggle state in case of button
+    type applet
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 08 Oct 2010 14:49:45 +0200
+ -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 11 Oct 2010 14:01:14 +0200
 
 duicontrolpanel (0.8.16) unstable; urgency=low
 
